--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/nindogofix.png"
+  image_path: "assets/icons/nindogox.png"
   remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -70,6 +70,8 @@ flutter:
 
   assets:
     - assets/images/nindogofix.png
+    - assets/images/iconlogo.png
+    - assets/images/nindogox.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -104,6 +106,6 @@ flutter:
 
 flutter_native_splash:
   color: "ffffff"
-  image: assets/images/nindogofix.png
+  image: assets/images/nindogox.png
   android: true
   ios: true
